# INMET-Data-Quality-Analyzer

./: .Rhistory  .gitignore  Guia Rápido - INMET Data Quality Analyzer.md  README.md  Resumo Técnico - INMET Data Quality Analyzer.md  app.py  app_architecture.md  config.py  inmet_analysis.md  pyproject.toml  requirements.txt  research_findings.md
modules/: __init__.py  data_loader.py  data_validator.py  quality_metrics.py  report_generator.py  visualizations.py
